@@ -1,3 +1,9 @@
+Thu Jul  7 20:38:10 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * dance/LocalityManager/Configuration/Process_Name.cpp:
+
+          Updated to address a glibc error in some Linux distributions. 
+
 Thu Jun 30 10:36:59 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * docs/Error_Documentation:
@@ -12,11 +18,11 @@ Thu Jun 30 10:36:59 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>
         * docs/Error_Documentation/outliner.js:
 
           Updated error documentation.
-        
+
         * docs/sources/Error_Documentation.oo3:
         * docs/sources/Error_Documentation.oo3/contents.xml:
-        
-          Source document for the error documentation. 
+
+          Source document for the error documentation.
 
         * docs/Error_Messages.txt:
 
